--- a/portfolio.css
+++ b/portfolio.css
@@ -1,5 +1,5 @@
 body {
-  background-color: black;
+  background-image: url(images/blackwallpaper.jpg);
   font-family: 'Secular One', sans-serif;
 }
 #front-grid {
