--- a/portfolio.css
+++ b/portfolio.css
@@ -1,3 +1,6 @@
+html {
+  background-image: url(images/blackwallpaper.jpg);
+}
 body {
   background-image: url(images/blackwallpaper.jpg);
   font-family: 'Secular One', sans-serif;
