--- a/portfolio.css
+++ b/portfolio.css
@@ -21,7 +21,7 @@
 }
 
 body {
-  background-image: url(images/space.gif);
+  background-image: url(images/blackwallpaper.jpg);
   font-family: 'Secular One', sans-serif;
 }
 #front-grid {
@@ -40,22 +40,27 @@ body {
 #portfolio-image:hover {
   filter: none;
 }
-
+#stick-gif {
+  height: 80px;
+  width: 60px;
+  padding-left: 50px;
+  filter: contrast(100%);
+}
 
 
 #personal-information {
   padding-left: 30px;
-  background-image: url(images/space.gif);
+  background-image: url(images/blackwallpaper.jpg);
   grid-row: 1/9;
   grid-column: 2/3;
   color: white;
 }
 
 #intro-message {
-  font-size: 30px;
+  font-size: 25px;
 }
 #myname {
-  font-size: 40px;
+  font-size: 35px;
   color: #23A6D5;
 }
 #job-title {
@@ -68,6 +73,7 @@ body {
   background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
   display: grid;
   grid-template-columns: repeat(4,1fr);
+  filter: opacity(70%);
 }
 .navbar-headings {
   transition: 0.5s ease-in;
@@ -79,15 +85,19 @@ body {
 .navbar-headings:hover {
   background-color: #23D5AB;
   cursor: pointer;
+  filter: none;
 }
 #home-info:hover {
   background-color: #EE7752;
+  filter: none;
 }
 #about-info:hover {
   background-color: #E73C7E;
+  filter: none;
 }
 #education-info:hover {
   background-color: #9400D3;
+  filter: none;
 }
 
 th {
@@ -96,7 +106,7 @@ th {
 #about-information {
   font-size: 25px;
   display: grid;
-  background-image: url(images/space.gif);
+  background-image: url(images/blackwallpaper.jpg);
   color: white;
   text-align: center;
   padding-bottom: 18px;
@@ -107,7 +117,7 @@ th {
 #education-information {
   font-size: 25px;
   display: grid;
-  background-image: url(images/space.gif);
+  background-image: url(images/blackwallpaper.jpg);
   color: white;
   text-align: center;
   padding-bottom: 18px;
@@ -115,13 +125,13 @@ th {
 #background {
   display: grid;
   grid-template-columns: repeat(2,1fr);
-  background-image: url(images/space.gif);
+  background-image: url(images/blackwallpaper.jpg);
   width: 100%;
   height: 187px;
 }
 
 #clients {
-background-image: url(images/space.gif);
+background-image: url(images/blackwallpaper.jpg);
 display: block;
 margin-left: auto;
 margin-right: auto;
