--- a/portfolio.css
+++ b/portfolio.css
@@ -22,7 +22,7 @@
 
 body {
   background-color: #1a1a1a;
-  font-family: 'Secular One', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 #front-grid {
   display: grid;
